[package]
name = "game-test"
version = "0.1.0"
authors = ["Hüseyin Akbaş <huskb.code@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.23.0"
nalgebra = "0.20.0"
ncollide2d = "0.22.0"
ncollide3d = "0.22.0"
rand = "0.7.3"
noise = "0.6.0"